Merged revisions 84506 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r84506 | antoine.pitrou | 2010-09-04 22:53:29 +0200 (sam., 04 sept. 2010) | 5 lines

  Issue #8734: Avoid crash in msvcrt.get_osfhandle() when an invalid file
  descriptor is provided.  Patch by Pascal Chambon.
........